# didactic_example

c++/file_structure/: CMakeLists.txt  main.cc  readme.md  run.bash  util.cc  util.h
c++/file_structure/sort/: insertion_sort.cc  merge_sort.cc  sort.h
python/: main.py  run.bash  util.py
python/sort/: __init__.py  insertion_sort.py  merge_sort.py
rust/file_structure/: Cargo.toml
rust/file_structure/src/: lib.rs  main.rs  sort.rs
rust/file_structure/src/sort/: insertion_sort.rs  merge_sort.rs
